typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression7.ts.stderr
error: TS2406
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression7.ts:1:4
  |
1 | ++ new Foo();
  |    ^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('Foo' type=inline),
    span: Span {
        lo: BytePos(
            7,
        ),
        hi: BytePos(
            10,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression7.ts:1:8
  |
1 | ++ new Foo();
  |        ^^^

